--- a/index.liquid
+++ b/index.liquid
@@ -2,4 +2,6 @@
 layout: base
 ---
 
-Hello World! This is a test.
+<p class="home-text">
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum iure nihil qui magni! Dolores nostrum vero quas, pariatur at expedita laudantium totam excepturi? Nobis totam, rerum debitis aperiam facere fuga.
+</p>
